--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "node-red-contrib-advanced-logger",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Advanced logger for Node-Red, forked from jayathuam/node-red-contrib-advance-logger",
-  "main": "advance-logger.js",
+  "main": "advanced-logger.js",
   "scripts": {
     "release": "standard-version"
   },
@@ -13,7 +13,7 @@
   ],
   "node-red": {
     "nodes": {
-      "node-red-contrib-logger": "advance-logger.js"
+      "node-red-contrib-advanced-logger": "advanced-logger.js"
     }
   },
   "author": {
