--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-advanced-logger",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Advanced logger for Node-Red, forked from jayathuam/node-red-contrib-advance-logger",
   "main": "advanced-logger.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "node-red"
   ],
   "node-red": {
+    "version": ">=2.0.0",
     "nodes": {
       "node-red-contrib-advanced-logger": "advanced-logger.js"
     }
